fix: hide overflow to avoid scroll bars in cards #885

--- a/src/assets/components/base.scss
+++ b/src/assets/components/base.scss
@@ -4,7 +4,7 @@
 
 @mixin ellipsis() {
   white-space: nowrap;
-  overflow-x: hidden;
+  overflow: hidden;
   text-overflow: ellipsis;
 }
 
